# ai_actuary

./: .gitignore  README.md  pyproject.toml
benchmarks/case_packs/: deterministic_case_pack.json
benchmarks/runners/: batch_runner.py
docs/: architecture.md  operator_handoff.md  project-plan.md
docs/architecture/: overview.md
docs/contracts/: control-plane.md
docs/plans/: actuarial-workbench-tool-console-roadmap.md  openai-hermes-composition-design.md
docs/reports/: current-workflow-report.md
prompts/codex/: step-by-step-prompts.md
references/: README.md
references/upstream/cas/: README.md
scripts/: compare_repeatability.py  export_run_report.py  list_runs.py  replay_case.py  rerun_case.py  run_batch_benchmark.py  run_governed_case.py  show_run.py
src/ai_actuary.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/reserving_workflow/: __init__.py  operator_entrypoint.py  validation.py
tests/: test_api_control_plane.py  test_artifact_storage.py  test_batch_runner.py  test_case_worker.py  test_chainladder_adapter.py  test_constitution_engine.py  test_control_plane_contracts.py  test_core_schemas.py  test_documentation_handoff.py  test_hermes_control_plane_client.py  test_openai_agents_runtime.py  test_openai_planner_adapter.py  test_openai_planner_runner.py  test_operator_entrypoint.py  test_replay_hooks.py  test_report_export.py  test_review_flow.py  test_run_registry.py  test_storage_interfaces.py  test_tool_catalog.py  test_validation.py  test_validation_step.py  test_worker_contracts.py  test_workflow_catalog.py
(+54 files in other folders)
