[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-actuary"
version = "0.1.0"
description = "AI Actuary project skeleton with CAS Core, OpenAI Planner, and Hermes Workers"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "chainladder>=0.9,<1",
  "openai-agents>=0.2,<1",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
]
dev = [
  "pytest>=8,<9",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
